Decrease max-width of .pricing-card to solve IE wrapping issue

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -154,7 +154,7 @@ body {
   }
 
   .pricing-card {
-    max-width: 400px;
+    max-width: 375px;
 
     .pricing-card-header {
       background-image: linear-gradient(to right, $cornflower-blue, $picton-blue);
